--- a/scss/_fact-section.scss
+++ b/scss/_fact-section.scss
@@ -2,6 +2,11 @@
 .fact{
     .fact-item{
 
+        .fact-icon img{
+            width: 5rem ;
+            height: 5rem ;
+        }
+
         @media (min-width:768px){
             width: 45%;
             flex-grow: 1;
@@ -13,6 +18,7 @@
             
             .fact-icon{
                 position: absolute;
+                
             }
             .fact-icon.top-right{
                 right: 0;
